# gaming

./: .clang-format  CMakeLists.txt  vcpkg.json
src/: main.cpp
src/kat/: context.cpp  context.hpp  types.hpp  window.cpp  window.hpp
